<resources>
    <string name="app_name">Juused</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_right_received_games">© All right received Games</string>
    <string name="welcome_to_juused">Welcome to JUUSED</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="what_is_your_email_address">What is your email address?</string>
    <string name="email_address">Email address</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="what_country_do_you_live_in">what country do you live in?</string>
    <string name="_continue">Continue</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="your_email_mobile">Your email / mobile</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_create_one">Don’t have an account? <u>Create one.</u></string>
    <string name="what_is_your_mobile_number">What is your mobile number?</string>
    <string name="mobile_number">Mobile number</string>
    <string name="change_country_code">Change country code</string>
    <string name="validate_your_mobile_number">Validate your mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_oto_02_00">Resend OTO 02:00</string>
    <string name="enter_is_your_name">Enter is your name?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User name</string>
    <string name="pick_up">Pick Up</string>
    <string name="draft_position_groups">Draft Position Groups</string>
    <string name="game">Game</string>
    <string name="lazy_player">not Players</string>
    <string name="auth_slider_desc_1">H2H matchups made better. Let the draw of the players determine your fate</string>
    <string name="auth_slider_desc_2">A modernized approach to Fantasy. Don\'t worry about players just teams</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="mobile_is_empty">Mobile number is empty</string>
    <string name="mobile_is_not_valid">Mobile number is not valid</string>
    <string name="firstname_empty_err">First name is empty</string>
    <string name="last_name_empty_err">Last name is empty</string>
    <string name="username_is_empty">Username is empty</string>
    <string name="player">Player</string>
    <string name="team">Team</string>
    <string name="jackpot">Jackpot</string>
    <string name="customized">Customized</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="nfl">NFL</string>
    <string name="baseball">Baseball</string>
    <string name="team_leagues">Team Leagues</string>
    <string name="team_contests">Team Contests</string>
    <string name="team_selection">Team Selection</string>
    <string name="wager">Wager</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="participate">Participate</string>
    <string name="bowlers_team">Bowlers Team</string>
    <string name="batsman_team">Batsman Team</string>
    <string name="p_pic">P Pic</string>
    <string name="name">Name</string>
    <string name="op_team">Op.Team</string>
    <string name="ppg">PPG</string>
    <string name="opp_rank">Opp. Rank</string>
    <string name="currently_matchable">Currently Matchable</string>
    <string name="not_currently_matchable">Not Currently Matchable</string>
    <string name="enter_a_custom_amount">Enter a Custom Amount</string>
    <string name="pick_wager_size">Pick Wager Size</string>
    <string name="put_wager">Put Wager</string>
    <string name="risk">Risk</string>
    <string name="to_win">To Win</string>
    <string name="confirm_game">Confirm Game</string>
    <string name="details">Details</string>
    <string name="chance_to_win">Chance to win</string>
    <string name="number_of_positions">Number of positions :</string>
    <string name="number_of_bats_man">Number of bats man :</string>
    <string name="number_of_bowlers">Number of bowlers :</string>
    <string name="number_of_wicket_keeper">Number of wicket keeper :</string>
    <string name="number_of_all_rounder">Number of all rounder :</string>
    <string name="contestants">Contestants :</string>
    <string name="spot_left">Spot Left :</string>
    <string name="contest_details">Contest Details</string>
    <string name="scoring">Scoring</string>
    <string name="payout">Payout</string>
    <string name="be_the_first_in_your_network_to_join_this_contest">Be the first in your network to join this contest.</string>
    <string name="join">Join</string>
    <string name="wk">WK (0)</string>
    <string name="bat">BAT (0)</string>
    <string name="ar">AR (0)</string>
    <string name="bowl">BOWL (0)</string>
    <string name="flex">FLEX (0)</string>
    <string name="uber_flex">Uber Flex(0)</string>
    <string name="select_1_3_wicket_keeper">Select 1 – 3 Wicket Keeper</string>
    <string name="team_preview">Team Preview</string>
    <string name="credits_left">Credits Left</string>
    <string name="players">Players</string>
    <string name="max_20_players_from_a_team">Max 20 players from a team</string>
    <string name="vs">Vs</string>
    <string name="pph_rank">PPH Rank</string>
    <string name="opp_pph_rank">Opp. PPH Rank</string>
    <string name="available_balance">Available Balance: $ 58.00</string>
    <string name="player_pick_up_str">Player Pick Up - CSK vs KKR</string>
    <string name="leagues">Leagues</string>
    <string name="player_selection">Player Selection</string>
</resources>